# teamup-api

./: .coverage  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  check-code-quality.sh  pyproject.toml  requirements.txt  ruff.toml  run.sh  test.sh
.github/workflows/: pre-commit.yaml  publish.yaml  pylint.yaml
app/: teamup_api.py  tempCodeRunnerFile.py
app/tests/: test_anki.py
py_teamup_api/: teamup_api.py
tests/: test_general.py
