[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.0"
name = "py-teamup-api"
authors = [{ name = "Tony", email = "cordial.egg1739@fastmail.com" }]
description = "A package for managing Teamup's resources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["requests", 'importlib-metadata; python_version<"3.10"']


[black]
line-length = 99
exclude = ["venv"]
